--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.+'
+        classpath 'com.android.tools.build:gradle:1.3.1'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
     }
 }
@@ -15,7 +15,7 @@ subprojects{
             mavenCentral()
         }
         dependencies {
-            classpath 'com.android.tools.build:gradle:1.0.+'
+            classpath 'com.android.tools.build:gradle:1.3.1'
             classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
         }
     }
