--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -30,6 +31,7 @@ subprojects {
     buildscript {
         repositories {
             mavenCentral()
+            jcenter()
         }
         dependencies {
             classpath 'com.android.tools.build:gradle:2.3.3'
